2005-09-13 19:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinSurfaceSmoothCost,gridSetMinSurfaceSmoothCost)
	to expose the minimum (volume) cost allowed durring surface smoothing.
	* src/gridcad.c (gridSmoothNode,gridLinearProgramUV) uses the
	gridMinSurfaceSmoothCost function to obtain min cost instead
	of gridOPTIM_COST_FLOOR #define.
	* src/unit_main.c (main) try gridSetMinInsertCost and 
	gridSetMinSurfaceSmoothCost of 0.1.

2005-09-13 15:45 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) cleaned up main to only do the standard form
	of adaptation to evaluate different techniques more rigorously.

2005-09-13 15:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdapt) to standardize the adaptation
	techniques, use a prioritized list (plan) to decide which edges
	to split or collpase.

2005-09-11 21:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridNumberOfInvalidCells) count cells with
	aspect ratio less than zero.
	* src/gridmetric.c (gridJacVolRatio) print to screen the ratio of the
	smallest jacobian to the cell volume for debuging validity.
	* src/gridinsert.c (gridCollapseInvalidCells) try to elimate
	invalid calls by collapsing the cells away from the boundary.
	* src/gridcad.c (gridSmoothInvalidCellNodes) elimate invalid cells
	by smoothing volume or min jacobian.
	* src/gridcad.c (gridUntangleBadFaceParameters) untanlge bad face
	parameters, this was used before the SDK local patch node
	numbering was corrected to fix the patch to keep going.
	* src/gridcad.c cleaned out the above routines
	
2005-09-07 15:07 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) refactored the path (currently
	disabled) that uses a plan to get all the long edges first and
	the the short edges second with priorities.

2005-09-07 10:15 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseEdge) test
	gridReconnectionOfAllFacesOK before collapsing edge.  This is used